fix font-scaling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,15 +78,3 @@ small.vertigo {
 small.vertigo:hover {
 	opacity: 1;
 }
-
-@media only screen and (max-width: 400px) {
-	body { font-size:90%;}
-}
-
-@media only screen and (max-width: 800px) {
-	body { font-size:100%;}
-}  
-
-@media only screen and (max-width: 1100px) {
-    body { font-size:120%; }
-}
